A bunch of css and layout tweaks

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
 
-  <div class="wrapper">
+  <!-- <div class="wrapper">
 
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
@@ -22,6 +22,18 @@
       </div>
     </nav>
 
-  </div>
+  </div> -->
+
+  <div class="notepad-site-head-content" >
+      <div class="notepad-site-head-bg"></div>
+      <h1 class="notepad-blog-title">
+      <a href="{{ site.url }}">
+          <span class="notepad-site-head-title-bg">
+              {{ site.title }}
+          </span>
+        </a>
+      </h1>
+      <h2 class="notepad-blog-description"> {{ site.description }} </h2>
+  </div> 
 
 </header>
