--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@
 </head>
 <body class="home-template" itemscope itemtype="http://schema.org/WebPage">
 <header class="notepad-site-head">
-    <div class="notepad-site-head-menu">
+<!--     <div class="notepad-site-head-menu">
         <a class="notepad-blog-logo" href="{{ site.url }}"><img src="{{ site.url }}/images/{{ site.logo }}" alt="Blog Logo" /></a>
         
         
@@ -29,16 +29,18 @@
     </ul>
 </div>
         <div class="clearfix"></div>
-    </div>
+    </div>-->
     <div class="notepad-site-head-content" >
         <div class="notepad-site-head-bg"></div>
         <h1 class="notepad-blog-title">
+        <a href="{{ site.url }}">
             <span class="notepad-site-head-title-bg">
                 {{ site.title }}
             </span>
+            </a>
         </h1>
-        <h2 class="notepad-blog-description">{{ site.description }}</h2>
-    </div>
+        <h2 class="notepad-blog-description"> {{ site.description }} </h2>
+    </div> 
 </header>
 
 
