--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,7 +10,7 @@
     
     
         <header class="notepad-page-header">
-            <div class="notepad-page-menu-header">
+<!--             <div class="notepad-page-menu-header">
                 
                     <a class="notepad-blog-logo" href="{{ site.url }}">
                         <img src="{{ site.url }}/images/{{ site.logo }}" alt="Blog Logo">
@@ -41,7 +41,17 @@
                 <div class="small-12 columns">
                     <h1>{{ page.title }}</h1>
                 </div>
-            </div>
+            </div> -->
+
+            <div class="notepad-site-head-content" >
+                <div class="notepad-site-head-bg"></div>
+                <h1 class="notepad-blog-title">
+                    <span class="notepad-site-head-title-bg">
+                        {{ site.title }}
+                    </span>
+                </h1>
+                <h2 class="notepad-blog-description"> {{ site.description }} </h2>
+            </div> 
         </header>
 
 <article class="notepad-page-content">
