--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,14 +14,26 @@
                 <div class="notepad-post-menu-header">
 {% else %}
         <main id="notepad-post-container-simple" class="notepad-post-container-simple" role="main">
-            <header class="notepad-post-header-simple">
+            <header class="notepad-post-header-simple notepad-site-head">
                 <div class="notepad-post-menu-header-simple">
 {% endif %}
-                    <a class="notepad-blog-logo" href="{{ site.url }}">
-                        <img src="{{ site.url }}/images/{{ site.logo }}" alt="Blog Logo" />
-                    </a>
 
-                <div class="notepad-blog-menu">      
+<div class="notepad-site-head-content" >
+    <div class="notepad-site-head-bg"></div>
+    <h1 class="notepad-blog-title">
+    <a href="{{ site.url }}">
+        <span class="notepad-site-head-title-bg">
+            {{ site.title }}
+        </span>
+    </a>
+    </h1>
+</div> 
+
+                    <!-- <a class="notepad-blog-logo" href="{{ site.url }}">
+                        <img src="{{ site.url }}/images/{{ site.logo }}" alt="Blog Logo" />
+                    </a> -->
+
+<!--                 <div class="notepad-blog-menu">      
     <div class="notepad-mobile-menu show-for-small">
         <a href="#"><i class="fa fa-bars"></i></a>
     </div>
@@ -39,7 +51,7 @@
            <li><a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="icon-rss"></i> Feed</a></li>
     </ul>
 
-</div>
+</div> -->
             </div>
 {% if page.imagefeature %}
             <div class="notepad-post-title bg-check">
