--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -182,7 +182,8 @@ html, body, .notepad-post-container, .notepad-post-header {
     -moz-osx-font-smoothing: grayscale; }
   .post-template .notepad-post-content {
     margin: 0 auto;
-    padding: 0; }
+    padding: 0;
+    min-height: 280px; }
     .post-template .notepad-post-content > div:not(.notepad-post-title) {
       margin: -25% auto 0;
       padding-left: 1.875rem;
@@ -318,10 +319,8 @@ html, body, .notepad-post-container, .notepad-post-header {
 
 .notepad-author-info {
   padding: 0;
-  padding-top: 3.75rem;
-  padding-bottom: 3.75rem;
-  background: #f2f2f2; }
-  @media only screen and (min-width: 40.063em) {
+ }
+/*  @media only screen and (min-width: 40.063em) {
     .notepad-author-info {
       padding-top: 5rem;
       padding-bottom: 5rem; } }
@@ -332,7 +331,7 @@ html, body, .notepad-post-container, .notepad-post-header {
   @media only screen and (min-width: 90em) {
     .notepad-author-info {
       padding-top: 7.5rem;
-      padding-bottom: 7.5rem; } }
+      padding-bottom: 7.5rem; } }*/
   .notepad-author-info .notepad-post-author {
     padding-left: 1.875rem;
     padding-right: 1.875rem;
@@ -374,7 +373,13 @@ html, body, .notepad-post-container, .notepad-post-header {
 .notepad-post-menu-header-simple {
   width: 100%;
   height: 5rem;
-  background-color: black;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3e54c0+0,1ebcaf+100 */
+  background: rgb(62,84,192); /* Old browsers */
+  background: -moz-linear-gradient(-45deg,  rgba(62,84,192,1) 0%, rgba(30,188,175,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg,  rgba(62,84,192,1) 0%,rgba(30,188,175,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg,  rgba(62,84,192,1) 0%,rgba(30,188,175,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3e54c0', endColorstr='#1ebcaf',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
   color: white;
   position: relative;
   z-index: 9999; }
@@ -428,15 +433,15 @@ html, body, .notepad-post-container, .notepad-post-header {
   .notepad-page-title .notepad-post-meta-simple,
   .notepad-post-title-simple .notepad-post-meta-simple {
     text-align: center;
-    padding-top: 5rem;
-    padding-bottom: 2.5rem; }
+    padding-top: 6rem;
+    padding-bottom: 2rem; }
     .notepad-page-title .notepad-post-meta-simple h1,
     .notepad-post-title-simple .notepad-post-meta-simple h1 {
       padding: 0; }
     .notepad-page-title .notepad-post-meta-simple p.meta,
     .notepad-post-title-simple .notepad-post-meta-simple p.meta {
       padding-top: 0.625rem; }
-    @media only screen and (min-width: 40.063em) {
+/*    @media only screen and (min-width: 40.063em) {
       .notepad-page-title .notepad-post-meta-simple,
       .notepad-post-title-simple .notepad-post-meta-simple {
         padding-top: 6.25rem;
@@ -450,7 +455,7 @@ html, body, .notepad-post-container, .notepad-post-header {
       .notepad-page-title .notepad-post-meta-simple,
       .notepad-post-title-simple .notepad-post-meta-simple {
         padding-top: 10rem;
-        padding-bottom: 6.25rem; } }
+        padding-bottom: 6.25rem; } }*/
 
 /* Page conent */
 .notepad-page-content {
@@ -512,7 +517,7 @@ html, body, .notepad-post-container, .notepad-post-header {
   margin-right: -0.9375rem; }
   .post-template .row p,
   .page-template .row p {
-    margin: 0 auto 2em auto !important;
+    margin: 0 auto !important;
     max-width: 56.25rem !important;
     font-size: 1.125rem !important; }
   @media only screen and (min-width: 58.125em) {
