--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
   line-height: 1; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Montserrat", sans-serif; }
+  font-family: "Oswald", sans-serif; }
 
 .notepad-parallax-background {
   position: fixed;
@@ -161,35 +161,60 @@ main, .notepad-share-icons, .notepad-disqus {
   width: 100%;
   text-align: center;
   background-size: cover;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3e54c0+0,1ebcaf+59,d585c5+100 */
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3e54c0+0,1ebcaf+100 */
   background: rgb(62,84,192); /* Old browsers */
-  background: -moz-linear-gradient(-45deg,  rgba(62,84,192,1) 0%, rgba(30,188,175,1) 59%, rgba(213,133,197,1) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(-45deg,  rgba(62,84,192,1) 0%,rgba(30,188,175,1) 59%,rgba(213,133,197,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(135deg,  rgba(62,84,192,1) 0%,rgba(30,188,175,1) 59%,rgba(213,133,197,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3e54c0', endColorstr='#d585c5',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  background: -moz-linear-gradient(-45deg,  rgba(62,84,192,1) 0%, rgba(30,188,175,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg,  rgba(62,84,192,1) 0%,rgba(30,188,175,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg,  rgba(62,84,192,1) 0%,rgba(30,188,175,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3e54c0', endColorstr='#1ebcaf',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
    }
   .notepad-site-head .notepad-site-head-content.with-bg-cover {
     background-color: rgba(0, 0, 0, 0.7); }
   .notepad-site-head .notepad-site-head-content .notepad-site-head-title-bg {
     display: inline-block;
-    padding: 0.625rem;
-    background: #5bace0;
-    line-height: 1.1; }
-  .notepad-site-head .notepad-site-head-content h1, .notepad-site-head .notepad-site-head-content h2 {
+    padding: 1rem;
+    background: repeating-linear-gradient(
+      -45deg,
+      rgba(30,188,175,.3),
+      rgba(30,188,175,.3) 175px,
+      rgba(62,84,192,.3) 175px,
+      rgba(62,84,192,.3) 353px
+    );
+    line-height: 1.1; 
+  }
+  .notepad-site-head .notepad-site-head-content .notepad-site-head-title-bg:hover {
+
+    background: repeating-linear-gradient(
+      -45deg,
+      rgba(30,188,175,.6),
+      rgba(30,188,175,.6) 175px,
+      rgba(62,84,192,.6) 175px,
+      rgba(62,84,192,.6) 353px
+    );
+  }
+  .notepad-site-head .notepad-site-head-content h1, .notepad-site-head .notepad-site-head-content h1 a, .notepad-site-head .notepad-site-head-content h2 {
     margin: 0;
     padding: 0;
     color: white;
     text-transform: uppercase; }
   .notepad-site-head .notepad-site-head-content h1 {
-    padding-top: 4.375rem;
-    font-size: 0.875rem;
-    margin-bottom: 0.9375rem; }
+    padding: 2rem 0;
+    font-size: 2.5rem;
+    margin-bottom: 0;
+    font-weight: 700; }
   .notepad-site-head .notepad-site-head-content h2 {
     font-size: 2.5rem;
-    padding-bottom: 5rem;
-    font-weight: 700;
-    line-height: 1.3; }
-  @media only screen and (min-width: 40.063em) {
+    padding: 0 0 3rem 0;
+    font-weight: 400;
+    line-height: 1.3;
+    text-transform: none; }
+
+    .notepad-post-content h1 {
+      display: none;
+    }
+
+  /*@media only screen and (min-width: 40.063em) {
     .notepad-site-head .notepad-site-head-content h1 {
       padding-top: 7.5rem;
       font-size: 1rem; }
@@ -216,7 +241,7 @@ main, .notepad-share-icons, .notepad-disqus {
       padding-top: 12.5rem; }
     .notepad-site-head .notepad-site-head-content h2 {
       font-size: 2.25rem;
-      padding-bottom: 12.5rem; } }
+      padding-bottom: 12.5rem; } }*/
 
 .notepad-content .notepad-index-post {
   visibility: hidden;
@@ -242,8 +267,8 @@ main, .notepad-share-icons, .notepad-disqus {
       display: block;
       font-size: 3.25rem;
       font-weight: 800;
-      color: #5bace0;
-      font-family: "Montserrat", sans-serif; }
+      color: rgba(62,84,192,.85);
+      font-family: "Oswald", Impact, sans-serif; }
     .notepad-content .notepad-index-post .notepad-post-meta .month-year {
       display: block;
       font-size: 1rem;
