--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,18 @@
 
   </div> -->
 
+  <a href="#" class="js-mobile-nav visuallyhidden--desk"><span title="Navigation Menu" class="typicons--menu"></span> Menu</a>
+
+  <div class="menu-angelroot-container visuallyhidden--lap visuallyhidden--palm"><ul id="menu-angelroot" class="nav menu flush"><li id="menu-item-2643" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2643"><a title="Angel Home" href="http://www.angelsolutions.co.uk/"><span class="typicons--home"></span></a></li>
+  <li id="menu-item-2644" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-72 current_page_item menu-item-2644"><a title="About Angel" href="http://www.angelsolutions.co.uk/aboutus/">About</a></li>
+  <li id="menu-item-2639" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2639"><a title="Angel Products" href="http://www.angelsolutions.co.uk/products/">Products</a></li>
+  <li id="menu-item-2640" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2640"><a title="Our Partners" href="http://www.angelsolutions.co.uk/partners/">Partners</a></li>
+  <li id="menu-item-2648" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2648"><a href="http://www.angelsolutions.co.uk/innovation/">Innovation</a></li>
+  <li id="menu-item-2641" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2641"><a title="Angel News" href="http://www.angelsolutions.co.uk/news/">News</a></li>
+  <li id="menu-item-2642" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2642"><a title="Contact us" href="http://www.angelsolutions.co.uk/contactus/">Contact</a></li>
+  <li id="menu-item-2695" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2695"><a href="http://www.angelsolutions.co.uk/login/">Login</a></li>
+  </ul></div>
+
   <div class="notepad-site-head-content" >
       <div class="notepad-site-head-bg"></div>
       <h1 class="notepad-blog-title">
