--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -29,3 +29,11 @@
 </script>
 {% endif %}
 <script>NProgress.start();var interval=setInterval(function(){NProgress.inc()},1000);jQuery(window).load(function(){clearInterval(interval);NProgress.done()});jQuery(window).unload(function(){NProgress.start()});</script>
+
+<script>
+    $( document ).ready(function() {
+        $(".js-mobile-nav").on("click", function(){
+            $(".menu-angelroot-container").toggleClass("visuallyhidden--lap visuallyhidden--palm");
+        });
+    });
+</script>
