--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,6 +30,26 @@
 </div>
         <div class="clearfix"></div>
     </div>-->
+
+    <div class="page-nav">
+                <div class="page-width text--center">
+                    <a href="#" class="js-mobile-nav visuallyhidden--desk"><span title="Navigation Menu" class="typicons--menu"></span><svg version="1.2" baseProfile="tiny" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 17h-14c-1.103 0-2 .897-2 2s.897 2 2 2h14c1.103 0 2-.897 2-2s-.897-2-2-2zM19 10h-14c-1.103 0-2 .897-2 2s.897 2 2 2h14c1.103 0 2-.897 2-2s-.897-2-2-2zM19 3h-14c-1.103 0-2 .897-2 2s.897 2 2 2h14c1.103 0 2-.897 2-2s-.897-2-2-2z"/></svg> Menu</a>
+                    <div class="menu-angelroot-container visuallyhidden--lap visuallyhidden--palm">
+                    <ul id="menu-angelroot" class="nav menu flush">
+                    <li id="menu-item-2643" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2643"><a title="Angel Home" href="http://www.angelsolutions.co.uk/"><span class="typicons--home"></span><svg version="1.2" baseProfile="tiny" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 3s-6.186 5.34-9.643 8.232c-.203.184-.357.452-.357.768 0 .553.447 1 1 1h2v7c0 .553.447 1 1 1h3c.553 0 1-.448 1-1v-4h4v4c0 .552.447 1 1 1h3c.553 0 1-.447 1-1v-7h2c.553 0 1-.447 1-1 0-.316-.154-.584-.383-.768-3.433-2.892-9.617-8.232-9.617-8.232z"/></svg></a></li>
+                    <li id="menu-item-2644" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-72  menu-item-2644"><a title="About Angel" href="http://www.angelsolutions.co.uk/aboutus/">About</a></li>
+                    <li id="menu-item-2639" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2639"><a title="Angel Products" href="http://www.angelsolutions.co.uk/products/">Products</a></li>
+                    <li id="menu-item-2640" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2640"><a title="Our Partners" href="http://www.angelsolutions.co.uk/partners/">Partners</a></li>
+                    <li id="menu-item-2648" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2648"><a href="http://www.angelsolutions.co.uk/innovation/">Innovation</a></li>
+                    <li id="menu-item-2641" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2641"><a title="Angel News" href="http://www.angelsolutions.co.uk/news/">News</a></li>
+                    <li id="menu-item-2642" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2642"><a title="Contact us" href="http://www.angelsolutions.co.uk/contactus/">Contact</a></li>
+                    <li id="menu-item-2695" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2695"><a href="http://www.angelsolutions.co.uk/login/">Login</a></li>
+                    <li id="menu-item-2695" class="menu-item menu-item-type-post_type current-menu-item  current_page_item menu-item-object-page menu-item-2695"><a href="http://labs.angelsolutions.co.uk">Labs</a></li>
+                    
+    </ul></div>         </div>
+            </div>
+
+
     <div class="notepad-site-head-content" >
         <div class="notepad-site-head-bg"></div>
         <h1 class="notepad-blog-title">
